# taricha

./: CMakeLists.txt  LICENSE  taricha.c  taricha.h  taricha2_512.c  taricha512.c  taricha512sum.c  taricha_hash_stream.c  tarichasum.c
lib/: CMakeLists.txt  taricha.h  taricha2_512.c  taricha512.c  taricha512_common.h
tarichasum/: CMakeLists.txt  options.c  options.h  processing.c  processing.h  taricha2_512sum.c  taricha512sum.c  taricha_hash_stream.c  taricha_hash_stream.h  tarichasum.c  tarichasum.h
